# gnome-backgrounds-classic

./: .gitattributes  .gitignore  AUTHORS  NEWS  README  README.md  configure.ac  gnome-backgrounds-classic.doap  gnome-backgrounds.doap  meson.build
backgrounds/: Makefile.am  adwaita-pi-timed.xml.in  adwaita-pi.xml.in.in  gnome-backgrounds-classic.xml.in.in  gnome-backgrounds.xml.in.in  meson.build
po/: POTFILES.in  POTFILES.skip  meson.build
